[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokstat"
version = "1.3.2"
description = "Aggregate and analyze Claude Code token consumption from local JSONL transcripts"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.7"
keywords = ["claude", "token", "usage", "ai", "llm", "cost"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/thiga-co/tokstat"
Repository = "https://github.com/thiga-co/tokstat"

[project.scripts]
claude-token-usage = "tokstat.cli:cli"
codex-token-usage = "tokstat.codex_cli:cli"
cursor-token-usage = "tokstat.cursor_cli:cli"
kiro-token-usage = "tokstat.kiro_cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
